--- a/mobile/src/main/res/layout/splashscreen.xml
+++ b/mobile/src/main/res/layout/splashscreen.xml
@@ -17,7 +17,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="126dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/logo" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -26,6 +26,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/imageView1"
         android:layout_marginBottom="45dp"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/by" />
 
 </RelativeLayout>
